# chess

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  logic.py  main.py  pyproject.toml  redis_client.py
.githooks/: pre-commit  pre-push
.github/workflows/: add-to-project.yml  ci.yml
tasks/: 01-invariant-hygiene.md  README.md
tests/: conftest.py  test_chess.py
ui/: index.html
