[project]
name = "mimigames-chess"
version = "0.1.0"
description = "Chess game microservice for MimiGames platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "redis[hiredis]>=5.2.0",
    "python-chess>=1.999",
    "mimigames-sdk @ git+https://github.com/mimigames-org/sdk.git@sdk-python#subdirectory=python",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.15.11",
    "ty>=0.0.31",
    "pip-audit>=2.10.0",
    "diff-cover>=10.2.0",
    "pygments>=2.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.environment]
python = ".venv"
